# cltf

./: .gitignore  README.md  requirements-workbench.txt  requirements.txt
.devcontainer/: devcontainer.json
R/: DESCRIPTION  LICENSE  NAMESPACE  README.md
R/R/: calibration.R  climate.R  cltf.R  concentration.R  observations.R  plots.R  silo.R  simulate.R  slga.R  water_balance.R
R/man/: cltf_layer.Rd  cltf_layer_probabilities.Rd  cltf_objective.Rd  cltf_pdf.Rd  cltf_two_layer_cdf.Rd  cumulative_infiltration.Rd  fetch_silo_point.Rd  fit_cltf.Rd  fit_rclt.Rd  infer_application_rate_g_ha.Rd  parse_silo_csv.Rd  parse_slga_bulk_density.Rd  pet_from_temperature.Rd  plot_climate_forcing.Rd  plot_mass_balance.Rd  plot_mass_fractions.Rd  (+11 more)
examples/: README.md  bcg01_demo.py  generate_bcg01_climate.py  synthetic_demo.py
pyclt/: __init__.py  climate.py  infiltration.py  model.py
python/: README.md  pyproject.toml
python/src/cltf/: __init__.py  calibration.py  climate.py  concentration.py  observations.py  plotting.py  silo.py  simulation.py  slga.py  transport.py  water_balance.py
python/src/cltf.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python/tests/: test_calibration.py  test_case_conformance.py  test_climate.py  test_concentration.py  test_observations.py  test_package.py  test_plotting.py  test_r_conformance.py  test_reference_runner.py  test_shared_cases.py  test_silo.py  test_simulation.py  test_slga.py  test_transport.py  test_water_balance.py
rclt/: DESCRIPTION  NAMESPACE  README.md
reference/: README.md  primitives.json  tolerances.json
(+134 files in other folders)
