[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cltf"
version = "0.1.0"
description = "Convective Lognormal Transfer Function for herbicide dynamics"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "scipy>=1.11",
  "matplotlib>=3.8",
  "requests>=2.31"
]

[project.optional-dependencies]
excel = ["openpyxl>=3.1"]
geo = ["rasterio>=1.3"]
test = ["pytest>=8", "openpyxl>=3.1"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
